--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 
 <head>
     <meta charset=utf-8/>
+    <link rel="stylesheet" href="style.css">
+    <title>ic-05</title>
 </head>
 
 
 <body>
-
-
+    <h1>Intro to JavaScript</h1>
+    <button type="button" onclick="buttonClicked()">Click me!</button>
+    <div id="button-div" class="gen">Number of times button clicked: 0</div>
+    <script src="main.js"></script>
 </body>
 
 </html>
