--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <h1>Intro to JavaScript</h1>
     <button type="button" onclick="buttonClicked()">Click me!</button>
     <div id="button-div" class="gen">Number of times button clicked: 0</div>
+    <h1>Acknowledgements</h1>
+    <ul>
+        <li>https://www.w3schools.com/tags/tag_button.asp</li>
+        <li>https://www.w3schools.com/jsref/event_onclick.asp</li>
+    </ul>
     <script src="main.js"></script>
 </body>
 
